--- a/kooplexhub/kooplex/hub/templates/auth/passwordreset.html
+++ b/kooplexhub/kooplex/hub/templates/auth/passwordreset.html
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-md-8">
         <section id="changepasswForm">
-            <form action="{% url 'preset' %}" method="post" class="form-horizontal">
+            <form action="{% url 'passwordresettoken' %}" method="post" class="form-horizontal">
                 {% csrf_token %}
                 <h4>Please, provide your username and e-mail address</h4>
                 <hr />
