--- a/kooplexhub/kooplex/hub/templates/auth/passwordreset.html
+++ b/kooplexhub/kooplex/hub/templates/auth/passwordreset.html
@@ -5,25 +5,26 @@
 <div class="row">
     <div class="col-md-8">
         <section id="changepasswForm">
-            <form action="{% url 'passwordresettoken' %}" method="post" class="form-horizontal">
+            <form action="{% url 'passwordreset' %}" method="post" class="form-horizontal">
                 {% csrf_token %}
                 <h4>Please, provide your username and e-mail address</h4>
                 <hr />
                 <div class="form-group">
                     <label for="id_username" class="col-md-2 control-label">Username</label>
                     <div class="col-md-10">
-                        <input class = "form-control" name = "username" placeholder = "username">
+                        <input class = "form-control" name = "username">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="id_email" class="col-md-2 control-label">E-mail</label>
                     <div class="col-md-10">
-                        <input class = "form-control" name = "email" placeholder = "email">
+                        <input class = "form-control" name = "email">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Send a token" class="btn btn-default" />
+                        <input name="btn_pwlogin" type="submit" value="Password login" class="btn btn-default" />
+                        <input name="btn_sendtoken" type="submit" value="Send a token" class="btn btn-default" />
                     </div>
                 </div>
                 {% if errors %}
