--- a/kooplexhub/kooplex/hub/templates/auth/tokenpassword.html
+++ b/kooplexhub/kooplex/hub/templates/auth/tokenpassword.html
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-md-8">
         <section id="changepasswForm">
-            <form action="{% url 'preset2' %}" method="post" class="form-horizontal">
+            <form action="{% url 'passwordresettoken' %}" method="post" class="form-horizontal">
                 {% csrf_token %}
                 <h4>Please, check your e-mail to know your temporary token</h4>
                 <hr />
