--- a/kooplexhub/kooplex/hub/templates/app/loginpartial.html
+++ b/kooplexhub/kooplex/hub/templates/app/loginpartial.html
@@ -1,5 +1,5 @@
 {% if user.is_authenticated %}
-     <form id="changepassw" action="{% url 'changepassword' %}" method="post" class="navbar-right">
+     <form id="changepassw" action="{% url 'passwordchange' %}" method="post" class="navbar-right">
     {% csrf_token %}
     <ul class="nav navbar-nav navbar-right">
         <li><a href="javascript:document.getElementById('changepassw').submit()">Change Password</a></li>
