password manipulation reworked

--- a/kooplexhub/kooplex/hub/templates/auth/passwordchange.html
+++ b/kooplexhub/kooplex/hub/templates/auth/passwordchange.html
@@ -6,44 +6,42 @@
 <div class="row">
     <div class="col-md-8">
         <section id="changepasswForm">
-            <form action="{% url 'chan' %}" method="post" class="form-horizontal">
+            <form action="{% url 'passwordchange' %}" method="post" class="form-horizontal">
                 {% csrf_token %}
                 <h4>Please, change your password!</h4>
                 <hr />
                 <div class="form-group">
                     <label for="id_username" class="col-md-2 control-label">User name</label>
                     <div class="col-md-10">
-                        <input class="form-control" id="id_username" name="username" value="{{ user.username }}" type="hidden" >
-                        {{ user.username }}
-
+                        <input class="form-control" name="username" value="{{ user.username }}" type="hidden" />{{ user.username }}
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="oldpassword" class="col-md-2 control-label">Old Password</label>
                     <div class="col-md-10">
-                        <input class="form-control" id="id_oldpassword" name="oldpassword" placeholder="Password" type="password">
+                        <input class="form-control" name="oldpassword" type="password" />
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="newpassword" class="col-md-2 control-label">New Password</label>
                     <div class="col-md-10">
-                        <input class="form-control" id="id_newpassword" name="newpassword" placeholder="Password" type="password">
+                        <input class="form-control" name="newpassword1" type="password" />
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="newpassword" class="col-md-2 control-label">New Password again</label>
                     <div class="col-md-10">
-                        <input class="form-control" id="id_newpassword2" name="new_password2" placeholder="Password" type="password">
+                        <input class="form-control" name="newpassword2" type="password" />
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Change password" class="btn btn-default" />
+                        <input type="submit" name="btn_pwchange" value="Change password" class="btn btn-default" />
+                        <input type="submit" name="btn_cancel" value="Cancel" class="btn btn-default" />
                     </div>
                 </div>
                 {% if errors %}
-                    {{ errors }}
-                <p class="validation-summary-errors">Please enter a correct user name and password.</p>
+                <p class="validation-summary-errors">{{ errors }}</p>
                 {% endif %}
             </form>
         </section>
