--- a/kooplexhub/kooplex/hub/templates/auth/tokenpassword.html
+++ b/kooplexhub/kooplex/hub/templates/auth/tokenpassword.html
@@ -9,23 +9,23 @@
                 {% csrf_token %}
                 <h4>Please, check your e-mail to know your temporary token</h4>
                 <hr />
-                <input type = 'hidden' name = "username" value = "{{ username }}">
+                <input type='hidden' name="username" value="{{ username }}">
                 <div class="form-group">
                     <label class="col-md-2 control-label">Token</label>
                     <div class="col-md-10">
-                        <input class = "form-control" name = "token" placeholder = "token">
+                        <input class="form-control" name="token">
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-md-2 control-label">New password</label>
                     <div class="col-md-10">
-                        <input class = "form-control" name = "password1" placeholder = "new password" type = "password">
+                        <input class="form-control" name="password1" type="password">
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-md-2 control-label">Retype password</label>
                     <div class="col-md-10">
-                        <input class = "form-control" name = "password2" placeholder = "new password again" type = "password">
+                        <input class="form-control" name="password2" type="password">
                     </div>
                 </div>
                 <div class="form-group">
