init model types from admin page; MODEL: image present flag added, container id added, image refresh fix, volume and collaborator iterators for the project; project start entry added; spawner not yet finalized; mkdir moved to filesystem module

--- a/kooplexhub/kooplex/hub/templates/admin/index.html
+++ b/kooplexhub/kooplex/hub/templates/admin/index.html
@@ -6,9 +6,8 @@
 
 <div id="content-related">
     <div class="module">
-        <a href="{% url 'refresh-images' %}" class="btn" data-toggle="tooltip" title="Turn to docker API and refresh available images in the model.">
-            Refresh Docker Images
-        </a>
+        <a href="{% url 'refresh-images' %}" class="button" data-toggle="tooltip" title="Turn to docker API and refresh available images in the model.">Refresh Docker Images</a><br>
+        <a href="{% url 'init-model' %}" class="button" data-toggle="tooltip" title="Make sure scope types and container types are defined in the model.">Initialize model types</a>
     </div>
 </div>
 
