--- a/kooplexhub/kooplex/hub/templates/project/pane-image.html
+++ b/kooplexhub/kooplex/hub/templates/project/pane-image.html
@@ -1,8 +1,11 @@
-<p>The current image for project {{ item.name }} is <strong>{{ item.image }}</strong>.</p>
+<p>The current image for project {{ project.name }} is <strong>{{ project.image }}</strong>.</p>
 
-<label>Your choice for the new image:
-<select id="project_images-{{ item.id }}" name="project_image-{{ item.id }}">
+<label>Your choice for the new image:</label>
+<select id="project_images-{{ project.id }}" name="project_image-{{ project.id }}">
   {% for image in images %}
-    <option value="{{ image }}" {% if image = item.image %} selected {% endif %}>{{ image }}</option>
+    <option value="{{ image }}" {% if project.image = image %} selected {% endif %}>{{ image }}</option>
   {% endfor %}
 </select>
+{% if project in running %}
+<div class="alert alert-warning" role="alert">This project {{ project }} is running. If you decide to change the image. Do not forget to restart the project container to take effect.</div>
+{% endif %}
