--- a/kooplexhub/kooplex/hub/templates/project/project-partial.html
+++ b/kooplexhub/kooplex/hub/templates/project/project-partial.html
@@ -1,19 +1,18 @@
 {% load custom_tags %}
 {% include 'project/settings.html' %}
 
-{% if item in running  %}
+{% if project in running  %}
 
 <div class="panel panel-success" style="margin-bottom: 3px">
   <div class="panel-heading" style="padding: 5px 5px;">
-    <a href="{% url 'container-open' %}?project_id={{ item.id }}" target="_blank">
+    <a href="{% url 'container-open' %}?project_id={{ project.id }}" target="_blank">
       <button role="button" type="button" class="btn btn-success" style="padding: 3px 6px 6px 6px">
         <span class="glyphicon glyphicon-folder-open" aria-hidden="true"> Open</span>
-      </button>
-    </a>
-    <a data-toggle="collapse"  href="#collapse{{ item.id }}" style="text-decoration: none; color: gray">
-      <strong data-toggle="tooltip" title="Running" data-placement="bottom">{{ item.name }}</strong>
-      {% if item.owner != user %} ( owned by {{ item.owner }} ) {% endif %}
-      <span class="badge" style="float: inline-end;"> Using image:<strong>{{ item.image }}</strong></span>
+      </button></a>
+    <a data-toggle="collapse"  href="#collapse{{ project.id }}" style="text-decoration: none; color: gray">
+      <strong data-toggle="tooltip" title="Running" data-placement="bottom">{{ project.name }}</strong>
+      {% if project.owner != user %} ( owned by {{ project.owner }} ) {% endif %}
+      <span class="badge" style="float: inline-end;"> Using image:<strong>{{ project.image }}</strong></span>
     </a>
   </div>
 
@@ -21,138 +20,92 @@
 
 <div class="panel panel-default" style="margin-bottom: 3px">
   <div class="panel-heading" style="padding: 5px 5px;">
-    <a href="{% url 'container-start' %}?project_id={{ item.id }}">
+    <a href="{% url 'container-start' %}?project_id={{ project.id }}">
       <button role="button" type="button" class="btn btn-default" style="padding: 3px 6px 6px 6px">
         <span class="glyphicon glyphicon-play" aria-hidden="true"> Start</span>
-      </button>
-    </a>
-    <a data-toggle="collapse"  href="#collapse{{ item.id }}" style="text-decoration: none; color: gray">
-      <strong>{{ item.name }}</strong>
-      {% if item.owner != user %} ( owned by {{ item.owner }} ) {% endif %}
-      <span class="badge" style="float: inline-end;"> Using image:<strong>{{ item.image }}</strong></span>
+      </button></a>
+    <a data-toggle="collapse"  href="#collapse{{ project.id }}" style="text-decoration: none; color: gray">
+      <strong>{{ project.name }}</strong>
+      {% if project.owner != user %} ( owned by {{ project.owner }} ) {% endif %}
+      <span class="badge" style="float: inline-end;"> Using image:<strong>{{ project.image }}</strong></span>
     </a>
   </div>
 
 {% endif %}
 
-  <div id="collapse{{ item.id }}" class="panel-collapse collapse">
+  <div id="collapse{{ project.id }}" class="panel-collapse collapse">
     <div class="panel-body">
-      <div class=" col-md-7 col-sm-7 col-xs-7">{{ item.description }}</div>
+      <div class=" col-md-7 col-sm-7 col-xs-7">{{ project.description }}</div>
 
             <!-- CONTAINER RELATED STUFF -->
 
       <div class=" col-md-5 col-sm-5 col-xs-5">
 
 {% if not publicvar %}
-      {% if item in running  %}
+      {% if project in running  %}
 
-        <a href="{% url 'container-delete' %}?project_id={{ item.id }}">
-          <button role="button" type="button" class="btn btn-danger" data-toggle="tooltip" title="Stop project container {{ item.name }}" data-placement="top">
+        <a href="{% url 'container-delete' %}?project_id={{ project.id }}">
+          <button role="button" type="button" class="btn btn-danger" data-toggle="tooltip" title="Stop project container {{ project.name }}" data-placement="top">
             <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
-          </button>
-        </a>
-        <a href="{% url 'container-open' %}?project_id={{ item.id }}" target="_blank">
-          <button role="button" type="button" class="btn btn-success" data-toggle="tooltip" title="Open project container: {{ item.name }}" data-placement="top">
+          </button></a>
+        <a href="{% url 'container-open' %}?project_id={{ project.id }}" target="_blank">
+          <button role="button" type="button" class="btn btn-success" data-toggle="tooltip" title="Open project container: {{ project.name }}" data-placement="top">
             <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>
-          </button>
-        </a>
-        <a href="{% url 'notebooks-publishform' %}?project_id={{ item.id  }}">
-          <button role="button" type="button" class="btn btn-warning" data-toggle="tooltip" title="Publish project: {{ item.name }}" data-placement="top">
+          </button></a>
+        <a href="{% url 'notebooks-publishform' %}?project_id={{ project.id  }}">
+          <button role="button" type="button" class="btn btn-warning" data-toggle="tooltip" title="Publish project: {{ project.name }}" data-placement="top">
             <span class="glyphicon glyphicon-flag" aria-hidden="true"></span>
-          </button>
-        </a>
-        <a href="#">
-{% if item.owner == user %} 
-          <button type="button" class="btn btn-default" data-toggle="tooltip" title="Project settings for running project {{ item.name }} is disabled" data-placement="top">
-{% else %}
-          <button type="button" class="btn btn-default" data-toggle="tooltip" title="Project settings for project {{ item.name }} is disabled, because it is owned by {{ item.owner }}" data-placement="top">
-{% endif %}
-            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-          </button>
-        </a>
+          </button></a>
 
       {% else %}  <!-- if running //-->
 
-        <a href="{% url 'container-start' %}?project_id={{ item.id }}">
-          <button role="button" type="button" class="btn btn-success" data-toggle="tooltip" title="Start project container {{ item.name }}" data-placement="top">
+        <a href="{% url 'container-start' %}?project_id={{ project.id }}">
+          <button role="button" type="button" class="btn btn-success" data-toggle="tooltip" title="Start project container {{ project.name }}" data-placement="top">
             <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-          </button>
-        </a>
+          </button></a>
         <a href="#">
-          <button role="button" type="button" class="btn btn-default" data-toggle="tooltip" title="Start project container {{ item.name }} to enable this button" data-placement="top">
+          <button role="button" type="button" class="btn btn-default" data-toggle="tooltip" title="Start project container {{ project.name }} to enable this button" data-placement="top">
             <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>
-          </button>
-        </a>
+          </button></a>
         <a href="#">
-          <button role="button" type="button" class="btn btn-default" data-toggle="tooltip" title="Start project container {{ item.name }} to enable this button" data-placement="top">
+          <button role="button" type="button" class="btn btn-default" data-toggle="tooltip" title="Start project container {{ project.name }} to enable this button" data-placement="top">
             <span class="glyphicon glyphicon-flag" aria-hidden="true"></span>
-          </button>
-        </a>
-{% if item.owner == user %} 
-        <a href="#" data-toggle="modal" data-target="#project-settings-{{ item.id  }}">
-          <button role="button" type="button" class="btn btn-info" data-toggle="tooltip" title="Settings of project {{ item.name }}. You can change the image, modify volume attachments or delete the project here." data-placement="top">
-            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-          </button>
-        </a>
-{% else %}
-        <a href="#">
-          <button role="button" type="button" class="btn btn-default" data-toggle="tooltip" title="Project setting for {{ item.name }} is disabled because its owner is {{ item.owner_username }}." data-placement="top">
-            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-          </button>
-        </a>
-{% endif %}
+          </button></a>
 
       {% endif %}  <!-- if running //-->
 
+        <a href="#" data-toggle="modal" data-target="#project-settings-{{ project.id  }}">
+          <button role="button" type="button" class="btn btn-info" data-toggle="tooltip" title="Settings of project {{ project.name }}. You can manage collaboration. You can change the image, modify volume attachments or delete the project here." data-placement="top">
+            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+          </button></a>
 
             <!-- GIT RELATED STUFF -->
 
-        <a href="{% url 'project-commit' %}?project_id={{ item.id }}">
-          <button role="button" type="button" class="btn btn-warning" data-toggle="tooltip" title="Version control of your project {{ item.name }}. You can commit your changes, revert to a former commited state or pull remote changes" data-placement="top">
+        <a href="{% url 'project-commit' %}?project_id={{ project.id }}">
+          <button role="button" type="button" class="btn btn-warning" data-toggle="tooltip" title="Version control of your project {{ project.name }}. You can commit your changes, revert to a former commited state or pull remote changes" data-placement="top">
             <span class="glyphicon glyphicon-random" aria-hidden="true"></span>
-          </button>
-        </a>
+          </button></a>
 
-            <!-- PROJECT RELATED STUFF -->
-
-{% if item.owner == user %} 
-        <a href="{% url 'project-members-form' %}?project_id={{ item.id }}">
-          <button role="button" type="button" class="btn btn-primary" data-toggle="tooltip" title="Manage the users of the project {{ item.name }}" data-placement="top">
-            <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-          </button>
-        </a>
-
-{% else %}
-        <a href="#">
-          <button role="button" type="button" class="btn btn-default" data-toggle="tooltip" title="Ask the owner of project {{ item.name }} ({{ item.owner_username }}) to remove you or add someone else to this project (Leave the project functionality is gonna be implmented soon.)" data-placement="top">
-            <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-          </button>
-        </a>
-{% endif %}
 {% else %} 
-      {% if item in running  %}
+      {% if project in running  %}
 
-        <a href="{% url 'container-delete' %}?project_id={{ item.id }}">
-          <button role="button" type="button" class="btn btn-danger" data-toggle="tooltip" title="Stop project container {{ item.name }}" data-placement="top">
+        <a href="{% url 'container-delete' %}?project_id={{ project.id }}">
+          <button role="button" type="button" class="btn btn-danger" data-toggle="tooltip" title="Stop project container {{ project.name }}" data-placement="top">
             <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
-          </button>
-        </a>
+          </button></a>
         <a href="{{ session.external_url }}" target="_blank">
-          <button role="button" type="button" class="btn btn-success" data-toggle="tooltip" title="Open project container: {{ item.name }}" data-placement="top">
+          <button role="button" type="button" class="btn btn-success" data-toggle="tooltip" title="Open project container: {{ project.name }}" data-placement="top">
             <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>
-          </button>
-        </a>
+          </button></a>
       {% else %}  <!-- if running //-->
-        <a href="{% url 'container-start' %}?project_id={{ item.id }}">
-          <button role="button" type="button" class="btn btn-success" data-toggle="tooltip" title="Start project container {{ item.name }}" data-placement="top">
+        <a href="{% url 'container-start' %}?project_id={{ project.id }}">
+          <button role="button" type="button" class="btn btn-success" data-toggle="tooltip" title="Start project container {{ project.name }}" data-placement="top">
             <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-          </button>
-        </a>
+          </button></a>
         <a href="#">
-          <button role="button" type="button" class="btn btn-default" data-toggle="tooltip" title="Start project container {{ item.name }} to enable this button" data-placement="top">
+          <button role="button" type="button" class="btn btn-default" data-toggle="tooltip" title="Start project container {{ project.name }} to enable this button" data-placement="top">
             <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>
-          </button>
-        </a>
+          </button></a>
      {% endif %}  <!-- if running //-->
 {% endif %}  <!-- if publicvar //-->
 
