--- a/kooplexhub/kooplex/hub/templates/auth/login.html
+++ b/kooplexhub/kooplex/hub/templates/auth/login.html
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
-            <form action="." method="post" class="form-horizontal">
+            <form action="{% url 'login' %}" method="post" class="form-horizontal">
                 {% csrf_token %}
                 <h4>Please provide your credentials to log in</h4>
                 <hr />
