--- a/kooplexhub/kooplex/hub/templates/report/settings.html
+++ b/kooplexhub/kooplex/hub/templates/report/settings.html
@@ -5,7 +5,7 @@
       <input type="hidden" name="report_id" value="{{ r.id }}">
       <div class="modal-body">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4>Setting of report <strong>{{ r.name }} [{{ r.ts_ }}]</strong></h4>
+        <h4>Setting of report <strong>{{ r.name }} [{{ r.pretty_ts }}]</strong></h4>
         <ul class="nav nav-tabs">
           <li class="active"><a href="#pane_scope-{{ r.id }}" data-toggle="tab">Scope</a></li>
           <li><a href="#pane_description-{{ r.id }}" data-toggle="tab">Description</a></li>
